name:                fibaas
version:             0.1.0.0
license:             MIT
author:              Rodrigo Navarro
maintainer:          rnavarro@rnavarro.com.br
category:            Experiment
build-type:          Simple
cabal-version:       >=1.10

executable fibaas-scotty
  main-is:             Scotty.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -A4M"
  build-depends:       base,
                       text,
                       scotty

executable fibaas-spock
  main-is:             Spock.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -A4M"
  build-depends:       base,
                       text,
                       Spock

executable fibaas-snap
  main-is:             Snap.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -A4M"
  build-depends:       base,
                       bytestring,
                       snap-core,
                       snap-server
