name:                fibaas-apiary
version:             0.1.0.0
license:             MIT
author:              Rodrigo Navarro
maintainer:          rnavarro@rnavarro.com.br
category:            Experiment
build-type:          Simple
cabal-version:       >=1.10

executable fibaas-apiary
  main-is:             Apiary.hs
  default-language:    Haskell2010
  default-extensions:  DataKinds,
                       QuasiQuotes
  ghc-options:         -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -A4M"
  build-depends:       base,
                       apiary==1.4.5,
                       warp
