name:                fibaas-simple
version:             0.1.0.0
license:             MIT
author:              Rodrigo Navarro
maintainer:          rnavarro@rnavarro.com.br
category:            Experiment
build-type:          Simple
cabal-version:       >=1.10

executable fibaas-simple
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -A4M"
  build-depends:       base,
                       bytestring,
                       simple==0.11.1,
                       warp
